--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
             isPlaying = true;
 
         }
-        else
+        else if(readyToPlay)
         {
             isPlaying = !isPlaying;
         }
